Fix z-index problems

--- a/src/App.css
+++ b/src/App.css
@@ -75,5 +75,9 @@ body {
 }
 
 [data-reach-tab-list] {
-    z-index: 50;
+    z-index: 40;
+}
+
+.apexcharts-toolbar {
+    z-index: 50 !important;
 }
